<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>bt_gen_pipeline</name>
  <version>0.0.0</version>
  <description>LLM + Behavior Tree Generator</description>
  <maintainer email="oguzhan.bozoglu@b-robotized.com">Oguzhan Bozoglu</maintainer>
  <license>Apache-2.0</license>

  <buildtool_depend>ament_cmake</buildtool_depend>
  <buildtool_depend>ament_cmake_python</buildtool_depend>

  <depend>python3</depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
